--- a/index.html
+++ b/index.html
@@ -4,8 +4,23 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <title> Amanda Helton </title>
   </head>
-  <body>
+    <body>
+      <h1> Hello, Code School! </h1>
 
-  </body>
+        <ul>
+    	     <li> HTML </li>
+    	     <li> CSS </li>
+    	     <li> jQuery </li>
+           <li> Git <li>
+           <li> Golang <li>
+           <li> SQL </li>
+           <li> How to Build and Deploy an Interactive Website </li>
+           <li> The Fundamentals of Design </li>
+           <li> The Elements of Web Design </li>
+           <li> Web Animations </li>
+           <li> Mobile Optimization </li>
+        </ul>
+    </body>
 </html>
