--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
     <title> Amanda Helton </title>
   </head>
     <body>
-      <h1> Hello, Code School!. </h1>
+      <h1>Hello, Code School!</h1>
 
         <ul>
-    	     <li> HTML </li>
-    	     <li> CSS </li>
-    	     <li> jQuery </li>
-           <li> Git <li>
-           <li> Golang <li>
-           <li> SQL </li>
-           <li> How to Build and Deploy an Interactive Website </li>
-           <li> The Fundamentals of Design </li>
-           <li> The Elements of Web Design </li>
-           <li> Web Animations </li>
-           <li> Mobile Optimization </li>
+    	     <li>HTML</li>
+    	     <li>CSS</li>
+    	     <li>jQuery</li>
+           <li>Git<li>
+           <li>Golang<li>
+           <li>SQL</li>
+           <li>How to Build and Deploy an Interactive Website</li>
+           <li>The Fundamentals of Design</li>
+           <li>The Elements of Web Design</li>
+           <li>Web Animations</li>
+           <li>Mobile Optimization</li>
         </ul>
     </body>
 </html>
