--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     	     <li>HTML</li>
     	     <li>CSS</li>
     	     <li>jQuery</li>
-           <li>Git<li>
+           <li>Git</li>
            <li>How to Build and Deploy an Interactive Website</li>
            <li>The Fundamentals of Design</li>
            <li>The Elements of Web Design</li>
            <li>Web Animations</li>
            <li>Mobile Optimization</li>
-           <li>Golang<li>
+           <li>Golang</li>
            <li>SQL</li>
         </ul>
     </body>
